--- a/tig/config
+++ b/tig/config
@@ -164,8 +164,8 @@ bind blob    h  scroll-left
 
 bind generic ;  +git rev-parse --show-toplevel
 
-bind generic yy +sh -c 'tig.run copy %(commit)'
-bind generic yf +sh -c 'tig.run copy %(file)'
+bind generic yy +tig.run copy %(commit)
+bind generic yf +tig.run copy %(file)
 # }
 
 # TODO:
@@ -179,119 +179,118 @@ bind generic yf +sh -c 'tig.run copy %(file)'
 # Feature {
 ## Commit
 bind generic c        none
-bind main    c<ENTER> >git commit -v
+bind main    c<ENTER>  >git commit -v
 bind main    ca       >?git commit -v --amend
 bind main    cn       @?git commit --amend --no-edit
-bind stage   c<ENTER> >git commit -v
+bind stage   c<ENTER>  >git commit -v
 bind stage   ca       >?git commit -v --amend
 bind stage   cn       @?git commit --amend --no-edit
-bind status  c<ENTER> >git commit -v
+bind status  c<ENTER>  >git commit -v
 bind status  ca       >?git commit -v --amend
 bind status  cn       @?git commit --amend --no-edit
 
 ## Stage/Unstage file
-bind stage   f<Enter> @sh -c 'tig.run stage_file "%(file)"'
-bind stage   fa       @sh -c 'tig.run stage_file'
+bind stage   f<Enter> @tig.run stage_file "%(file)"
+bind stage   fa       @tig.run stage_file
 
 ## Add stash
-bind main    sa       @git stash save "%(prompt new stash: )"
-bind main    s<Enter> @sh -c 'tig.run stash'
-bind main    sp       @sh -c 'tig.run cmd stash pop stash@{0}'
-bind stage   sa       @git stash save "%(prompt new stash: )"
-bind stage   s<Enter> @sh -c 'tig.run stash'
-bind stage   sp       @sh -c 'tig.run cmd stash pop stash@{0}'
-bind status  sa       @git stash save "%(prompt new stash: )"
-bind status  s<Enter> +sh -c 'tig.run stash'
-bind status  sp       +sh -c 'tig.run cmd stash pop stash@{0}'
+bind main    sa        @tig.run git.stash "%(prompt new stash: )"
+bind main    s<Enter>  @tig.run git.stash
+bind main    sp       :!tig.run git.full stash pop stash@{0}
+bind stage   sa        @tig.run git.stash save "%(prompt new stash: )"
+bind stage   s<Enter>  @tig.run stash
+bind stage   sp       :!tig.run git.full stash pop stash@{0}
+bind status  sa        @tig.run git.stash save "%(prompt new stash: )"
+bind status  s<Enter>  @tig.run stash
+bind status  sp       :!tig.run git.full stash pop stash@{0}
 
 ## Add/Remove/Move tag and branch
-bind main   ta       @sh -c 'tig.run cmd tag "%(prompt new tag: )" %(commit)'
-bind main   t<ENTER> @sh -c 'tig.run cmd tag tag.$(git rev-parse --short %(commit)) %(commit)'
-bind main   ba       @sh -c 'tig.run cmd branch "%(prompt new branch: )" %(commit)'
-bind main   b<ENTER> @sh -c 'tig.run cmd branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
-bind main   a<ENTER> @sh -c 'tig.run add "%(commit)"'
-bind main   d<ENTER> @sh -c 'tig.run del "%(commit)"'
-bind reflog ta       @sh -c 'tig.run cmd tag "%(prompt new tag: )" %(commit)'
-bind reflog t<ENTER> @sh -c 'tig.run cmd tag tag.$(git rev-parse --short %(commit)) %(commit)'
-bind reflog ba       @sh -c 'tig.run cmd branch "%(prompt new branch: )" %(commit)'
-bind reflog b<ENTER> @sh -c 'tig.run cmd branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
-bind reflog a<ENTER> @sh -c 'tig.run add "%(commit)"'
-bind reflog d<ENTER> @sh -c 'tig.run del "%(commit)"'
-bind diff   ta       @sh -c 'tig.run cmd tag "%(prompt new tag: )" %(commit)'
-bind diff   t<ENTER> @sh -c 'tig.run cmd tag tag.$(git rev-parse --short %(commit)) %(commit)'
-bind diff   ba       @sh -c 'tig.run cmd branch "%(prompt new branch: )" %(commit)'
-bind diff   b<ENTER> @sh -c 'tig.run cmd branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)'
-bind diff   a<ENTER> @sh -c 'tig.run add "%(commit)"'
-bind diff   d<ENTER> @sh -c 'tig.run del "%(commit)"'
-bind refs   ta       @sh -c 'tig.run cmd tag "%(prompt new tag: )" HEAD'
-bind refs   t<ENTER> @sh -c 'tig.run cmd tag tag.$(git rev-parse --short HEAD) HEAD'
-bind refs   ba       @sh -c 'tig.run cmd branch "%(prompt new branch: )" HEAD'
-bind refs   b<ENTER> @sh -c 'tig.run cmd branch branch.$(basename $(git rev-parse --show-toplevel)) HEAD'
-bind refs   a<ENTER> @sh -c 'tig.run add "%(commit)"'
-bind refs   d<ENTER> @sh -c 'tig.run del "%(commit)"'
+bind main   ta       @tig.run git.quiet tag "%(prompt new tag: )" %(commit)
+bind main   t<ENTER> @tig.run git.quiet tag tag.$(git rev-parse --short %(commit)) %(commit)
+bind main   ba       @tig.run git.quiet branch "%(prompt new branch: )" %(commit)
+bind main   b<ENTER> @tig.run git.quiet branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)
+bind main   a<ENTER> @tig.run add "%(commit)"
+bind main   d<ENTER> @tig.run del "%(commit)"
+bind reflog ta       @tig.run git.quiet tag "%(prompt new tag: )" %(commit)
+bind reflog t<ENTER> @tig.run git.quiet tag tag.$(git rev-parse --short %(commit)) %(commit)
+bind reflog ba       @tig.run git.quiet branch "%(prompt new branch: )" %(commit)
+bind reflog b<ENTER> @tig.run git.quiet branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)
+bind reflog a<ENTER> @tig.run add "%(commit)"
+bind reflog d<ENTER> @tig.run del "%(commit)"
+bind diff   ta       @tig.run git.quiet tag "%(prompt new tag: )" %(commit)
+bind diff   t<ENTER> @tig.run git.quiet tag tag.$(git rev-parse --short %(commit)) %(commit)
+bind diff   ba       @tig.run git.quiet branch "%(prompt new branch: )" %(commit)
+bind diff   b<ENTER> @tig.run git.quiet branch branch.$(basename $(git rev-parse --show-toplevel)) %(commit)
+bind diff   a<ENTER> @tig.run add "%(commit)"
+bind diff   d<ENTER> @tig.run del "%(commit)"
+bind refs   ta       @tig.run git.quiet tag "%(prompt new tag: )" HEAD
+bind refs   t<ENTER> @tig.run git.quiet tag tag.$(git rev-parse --short HEAD) HEAD
+bind refs   ba       @tig.run git.quiet branch "%(prompt new branch: )" HEAD
+bind refs   b<ENTER> @tig.run git.quiet branch branch.$(basename $(git rev-parse --show-toplevel)) HEAD
+bind refs   a<ENTER> @tig.run add "%(commit)"
+bind refs   d<ENTER> @tig.run del "%(commit)"
 
 ## Checkout
-bind main   co +sh  -c 'tig.run cmd checkout %(commit)'
-bind refs   co +sh  -c 'tig.run cmd checkout %(ref)'
-bind refs   cd +sh  -c 'tig.run cmd checkout -d %(ref)'
-bind reflog co +sh  -c 'tig.run cmd checkout %(commit)'
-bind status co +?sh -c 'tig.run cmd checkout %(file)'
-bind stage  co +?sh -c 'tig.run cmd checkout %(file)'
-bind diff   co +?sh -c 'tig.run cmd checkout %(file)'
+bind main   co  +tig.run git.full checkout %(commit)
+bind refs   co  +tig.run git.full checkout %(ref)
+bind reflog co  +tig.run git.full checkout %(commit)
+bind status co +?tig.run git.full checkout %(file)
+bind stage  co +?tig.run git.full checkout %(file)
+bind diff   co +?tig.run git.full checkout %(file)
 
 ### File Operation
-bind main   dc       +?sh -c 'tig.run cmd clean -fd'
+bind main   dc       +?tig.run git.quiet clean -fd
 bind status d<Enter> @?rm -rf %(file)
-bind status dd       @?sh -c 'rm -rf $(dirname %(file))'
-bind status dc       +?sh -c 'tig.run cmd clean -fd'
+bind status dd       @?rm -rf $(dirname %(file))
+bind status dc       +?tig.run git.quiet clean -fd
 bind stage  d<Enter> @?rm -rf %(file)
-bind stage  dd       @?sh -c 'rm -rf $(dirname %(file))'
-bind stage  dc       +?sh -c 'tig.run cmd clean -fd'
+bind stage  dd       @?rm -rf $(dirname %(file))
+bind stage  dc       +?tig.run git.quiet clean -fd
 bind diff   d<Enter> @?rm -rf %(file)
-bind diff   dd       @?sh -c 'rm -rf $(dirname %(file))'
+bind diff   dd       @?rm -rf $(dirname %(file))
 
 ## Reset commits
 bind main    rh +sh -c '[[ "%(prompt enter "y" to hard reset: )" == "y" ]] && git reset --hard %(commit)'
 bind reflog  rh +sh -c '[[ "%(prompt enter "y" to hard reset: )" == "y" ]] && git reset --hard %(commit)'
 bind diff    rh +sh -c '[[ "%(prompt enter "y" to hard reset: )" == "y" ]] && git reset --hard %(commit)'
-bind main    rs +sh -c '[[ "%(prompt enter "y" to soft reset: )" == "y" ]] && git reset %(commit)'
-bind reflog  rs +sh -c '[[ "%(prompt enter "y" to soft reset: )" == "y" ]] && git reset %(commit)'
-bind diff    rs +sh -c '[[ "%(prompt enter "y" to soft reset: )" == "y" ]] && git reset %(commit)'
+bind main    rs +sh -c '[[ "%(prompt enter "y" to reset: )" == "y" ]] && git reset %(commit)'
+bind reflog  rs +sh -c '[[ "%(prompt enter "y" to reset: )" == "y" ]] && git reset %(commit)'
+bind diff    rs +sh -c '[[ "%(prompt enter "y" to reset: )" == "y" ]] && git reset %(commit)'
 bind stage   rn +sh -c '[[ "%(prompt enter "y" to hard reset HEAD: )" == "y" ]] && git reset --hard'
 bind main    rn +sh -c '[[ "%(prompt enter "y" to hard reset HEAD: )" == "y" ]] && git reset --hard'
-bind main    rp +sh -c '[[ "%(prompt enter "y" to hard reset HEAD@{1}: )" == "y" ]] && git reset HEAD@{1}'
+bind main    rp +sh -c '[[ "%(prompt enter "y" to reset HEAD@{1}: )" == "y" ]] && git reset HEAD@{1}'
 
 ## Cherry-pick
-bind main   cp +sh -c 'tig.run cmd cherry-pick -s %(commit)'
-bind refs   cp +sh -c 'tig.run cmd cherry-pick -s %(commit)'
-bind reflog cp +sh -c 'tig.run cmd cherry-pick -s %(commit)'
-bind diff   cp +sh -c 'tig.run cmd cherry-pick -s %(commit)'
+bind main   cp :!tig.run git.rcv cherry-pick -s %(commit)
+bind refs   cp :!tig.run git.rcv cherry-pick -s %(commit)
+bind reflog cp :!tig.run git.rcv cherry-pick -s %(commit)
+bind diff   cp :!tig.run git.rcv cherry-pick -s %(commit)
 
 ## Format patch {
-bind main   ps       @sh -c 'tig.run choose patch %(commit)'
-bind main   p<Enter> +sh -c 'tig.run patch.create'
-bind main   p1       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
-bind main   pn       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch %(commit)^'
-bind main   pr       @sh -c 'tig.run patch.reset'
-bind diff   ps       @sh -c 'tig.run choose patch %(commit)'
-bind diff   p<Enter> +sh -c 'tig.run patch.create'
-bind diff   p1       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
-bind diff   pn       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch %(commit)^'
-bind diff   pf       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch %(commit) %(file)'
-bind diff   pr       @sh -c 'tig.run patch.reset'
-bind log    ps       @sh -c 'tig.run choose patch %(commit)'
-bind log    p<Enter> +sh -c 'tig.run patch.create'
-bind log    p1       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
-bind log    pn       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch %(commit)^'
-bind log    pf       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch %(commit) %(file)'
-bind log    pr       @sh -c 'tig.run patch.reset'
-bind reflog ps       @sh -c 'tig.run choose patch %(commit)'
-bind reflog p<Enter> +sh -c 'tig.run patch.create'
-bind reflog p1       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
-bind reflog pr       @sh -c 'tig.run patch.reset'
-bind blame  p1       +sh -c 'tig.run cmd format-patch -k --binary --histogram -o .patch -1 %(commit)'
-bind stage  p1       @sh -c 'tig.run cmd diff --output=$(date +%y%m%d%H%M%S).diff --binary --histogram'
-bind stage  pf       @sh -c 'tig.run cmd diff --output=$(date +%y%m%d%H%M%S)_$(basename %(file)).diff --binary --histogram %(file)'
+bind main   ps       @tig.run patch.add %(commit)
+bind main   p<Enter> +tig.run patch.create
+bind main   p1       +tig.run git.full format-patch -k --binary --histogram -o .patch -1 %(commit)
+bind main   pn       +tig.run git.full format-patch -k --binary --histogram -o .patch %(commit)^
+bind main   pr       @tig.run patch.reset
+bind diff   ps       @tig.run patch.add %(commit)
+bind diff   p<Enter> +tig.run patch.create
+bind diff   p1       +tig.run git.full format-patch -k --binary --histogram -o .patch -1 %(commit)
+bind diff   pn       +tig.run git.full format-patch -k --binary --histogram -o .patch %(commit)^
+bind diff   pf       +tig.run git.full format-patch -k --binary --histogram -o .patch %(commit) %(file)
+bind diff   pr       @tig.run patch.reset
+bind log    ps       @tig.run patch.add %(commit)
+bind log    p<Enter> +tig.run patch.create
+bind log    p1       +tig.run git.full format-patch -k --binary --histogram -o .patch -1 %(commit)
+bind log    pn       +tig.run git.full format-patch -k --binary --histogram -o .patch %(commit)^
+bind log    pf       +tig.run git.full format-patch -k --binary --histogram -o .patch %(commit) %(file)
+bind log    pr       @tig.run patch.reset
+bind reflog ps       @tig.run patch.add %(commit)
+bind reflog p<Enter> +tig.run patch.create
+bind reflog p1       +tig.run git.full format-patch -k --binary --histogram -o .patch -1 %(commit)
+bind reflog pr       @tig.run patch.reset
+bind blame  p1       +tig.run git.full format-patch -k --binary --histogram -o .patch -1 %(commit)
+bind stage  p1       @tig.run git.quiet diff --output=$(date +%y%m%d%H%M%S).diff --binary --histogram
+bind stage  pf       @tig.run git.quiet diff --output=$(date +%y%m%d%H%M%S)_$(basename %(file)).diff --binary --histogram %(file)
 # }
 
 # Stage {
@@ -308,32 +307,28 @@ bind status ! none
 bind refs C none
 bind refs ! none
 
-bind refs s<ENTER> :!sh -c 'tig.run save "%(commit)" "%(branch)" "%(refname)" "%(tag)" "%(file)"'
-bind refs f<ENTER> :!sh -c 'tig.run cmd fetch --prune --all'
-bind refs m<ENTER> :!sh -c 'tig.run cmd.rcv merge %(commit)'
-bind refs rb       :!sh -c 'tig.run cmd.rcv rebase %(commit)'
-bind refs su       !sh -c 'tig.run choose push %(commit) %(refname)'
-bind refs cs       +sh -c 'tig.run choose clean'
+bind refs s<ENTER> :!tig.run save "%(commit),%(branch),%(refname),%(tag),%(file)"
+bind refs f<ENTER> :!tig.run cmd fetch --prune --all
+bind refs rb       :!tig.run git.rcv rebase %(commit)
+bind refs sP       !?tig.run ref.push
+bind refs cs        +tig.run clean
 # }
 
 # Main {
 bind main C none
 bind main ! none
 
-bind main bs +sh -c 'tig.run cmd bisect start'
-bind main bg +sh -c 'tig.run cmd bisect good %(commit)'
-bind main bb +sh -c 'tig.run cmd bisect bad %(commit)'
-bind main br +sh -c 'tig.run cmd bisect reset'
-bind main rv +sh -c 'tig.run cmd.rcv revert --no-edit %(commit)'
-bind diff rv +sh -c 'tig.run cmd.rcv revert --no-edit %(commit)'
+bind main bs +tig.run git.full bisect start
+bind main bg +tig.run git.full bisect good %(commit)
+bind main bb +tig.run git.full bisect bad %(commit)
+bind main br +tig.run git.full bisect reset
+bind main rv :!tig.run git.rcv revert --no-edit %(commit)
+bind diff rv :!tig.run git.rcv revert --no-edit %(commit)
 bind main rb >?git rebase -i %(commit)
 bind main ra >?git rebase --abort
 bind main rc >?git rebase --continue
-bind main su !sh -c 'tig.run choose push %(commit) %(refname)'
-bind main sm +sh -c 'tig.run choose merge %(commit) %(refname)'
-bind main sr +sh -c 'tig.run choose rebase %(commit) %(refname)'
-bind main sc +sh -c 'tig.run choose clean'
-bind main <SingleQuote> :!sh -c 'printf -- "-- Commit Statistics --\\n\\nCommit\\tAuthor\\n"; git shortlog --summary --numbered --all --no-merges'
+bind main sP !?tig.run ref.push %(commit)
+bind main <SingleQuote> :!tig.run commit_report
 # }
 
 # Log {
