--- a/tig/config
+++ b/tig/config
@@ -115,6 +115,12 @@ bind main  -<ENTER> <tig --no-merges
 bind main  -a       <tig --no-merges --author="%(prompt search author name: )"
 bind main  =        <tig
 
+## Reflog format
+bind reflog =       <tig reflog
+
+## Status format
+bind main  =        <tig status
+
 ## Refs format
 bind refs  =        <tig refs
 bind refs  -b       <tig refs --branches
