--- a/tig/config
+++ b/tig/config
@@ -323,7 +323,7 @@ bind refs ! none
 bind refs s<ENTER> :!tig.run save "%(commit),%(branch),%(refname),%(tag),%(file)"
 bind refs f<ENTER> :!tig.run git.full fetch --prune --all
 bind refs rb       :!tig.run git.rcv rebase %(commit)
-bind refs pp       !?tig.run push
+bind refs pp       !?tig.run push "%(commit)"
 bind refs pb       !?tig.run push.create "%(branch)"
 bind refs pt       !?tig.run push.create "%(tag)"
 bind refs cs        +tig.run clean
