tmux: add keybind to tmux-fuzzback

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -221,6 +221,9 @@ set -g @fuzzback-bind         'j'
 set -g @fuzzback-popup        0
 set -g @fuzzback-hide-preview 1
 set -g @fuzzback-fzf-colors   'hl:1:underline,hl+:1:underline'
+# This setting is copied from FZF_DEFAULT_OPTS as tmux-fuzzback doesn't
+# accept external environment variable
+set -g @fuzzback-finder-bind  'ctrl-d:half-page-down,ctrl-u:half-page-up,ctrl-s:toggle-sort,ctrl-p:toggle-preview,ctrl-a:first,ctrl-e:last,ctrl-c:cancel,ctrl-t:toggle-track'
 
 set -g @plugin                               'IngoMeyer441/tmux-easy-motion'
 set -g @easy-motion-prefix                   "f"
