--- a/tig/config
+++ b/tig/config
@@ -324,6 +324,7 @@ bind refs s<ENTER> :!tig.run save "%(commit),%(branch),%(refname),%(tag),%(file)
 bind refs f<ENTER> :!tig.run git.full fetch --prune --all
 bind refs rb       :!tig.run git.rcv rebase %(commit)
 bind refs pp       !?tig.run push "%(commit)"
+bind refs pP       !?tig.run push -f "%(commit)"
 bind refs pb       !?tig.run push.create "%(branch)"
 bind refs pt       !?tig.run push.create "%(tag)"
 bind refs cs        +tig.run clean
