nvim,tmux: match jump keybinds between tmux and nvim

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -217,7 +217,7 @@ set -g @extrakto_split_direction        'p'
 set -g @extrakto_fzf_unset_default_opts "false"
 
 set -g @plugin                'roosta/tmux-fuzzback'
-set -g @fuzzback-bind         'j'
+set -g @fuzzback-bind         'b'
 set -g @fuzzback-popup        0
 set -g @fuzzback-hide-preview 1
 set -g @fuzzback-fzf-colors   'hl:1:underline,hl+:1:underline'
@@ -226,7 +226,7 @@ set -g @fuzzback-fzf-colors   'hl:1:underline,hl+:1:underline'
 set -g @fuzzback-finder-bind  'ctrl-d:half-page-down,ctrl-u:half-page-up,ctrl-s:toggle-sort,ctrl-p:toggle-preview,ctrl-a:first,ctrl-e:last,ctrl-c:cancel,ctrl-t:toggle-track'
 
 set -g @plugin                               'IngoMeyer441/tmux-easy-motion'
-set -g @easy-motion-prefix                   "f"
+set -g @easy-motion-prefix                   "g"
 set -g @easy-motion-target-keys              "fjdkslghrua;eiwoqptyvncm"
 set -g @easy-motion-default-motion           "bd-f"
 set -g @easy-motion-dim-style                "fg=colour242"
