--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,7 +33,7 @@ if '[ "$TERM" = "linux" ]' {
 	set -g default-terminal tmux
 }
 
-setw -g  automatic-rename       # rename window automately
+setw -g  automatic-rename on    # rename window automately
 setw -g  mode-keys        vi    # set copy-mode to vi style
 set  -g  base-index       1     # set to the leftest number on the keyboard
 set  -g  pane-base-index  1     # set to the leftest number on the keyboard
@@ -48,7 +48,7 @@ set  -g aggressive-resize on    # determine the size of windows depending on whe
 
 # Border
 set -g pane-border-status top
-set -g pane-border-format " #{?pane_active,#[reverse],}[#P:#{pane_pid}]#[default] TTY:#{pane_tty} CMD:#{pane_current_command} "
+set -g pane-border-format " #{?pane_active,#[reverse],}[###P:#{pane_pid}]#[default] #{pane_current_command}:#{pane_title}#{?pane_last,##,} #{?pane_marked,[M] ,}#{?pane_synchronized,[S!] ,}#{?pane_unseen_changes,[C!] }#{?pane_input_off,[I!] ,}#{?pane_dead,[DEAD:#{pane_dead_time}#,#{pane_dead_signal}#,#{pane_dead_status}] ,}"
 # Used for switching window and creating multiple panes
 set-hook -g -w pane-focus-in "
 	if -F '#{e|>:#{window_panes},1}' {
@@ -138,31 +138,30 @@ bind c new-window -a -c "#{pane_current_path}"	# enhance keybind c
 
 # Pane:
 # - select-layout -E could only balance the simple layout
-# - unidirectional switch to next pane
 # [x] pop up menu for pane operation
-unbind Up		# Change to the pane above of the current pane.
-unbind Down		# Change to the pane below of the current pane.
-unbind Left		# Change to the pane left of the current pane.
-unbind Right	# Change to the pane right of the current pane.
 unbind '"'
 unbind %
 bind | split-window -h -c "#{pane_current_path}" ';' select-layout -E
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
 bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x
-bind -r \\ select-pane -Z -t :.+     # enhance keybind n
+bind -r Right select-pane -Z -R
+bind -r Left select-pane -Z -L
+bind -r Up select-pane -Z -U
+bind -r Down select-pane -Z -D
 
 # Copy-mode:
 unbind [
-bind `   copy-mode
+bind e   copy-mode
+bind `   send-prefix
 bind ?   copy-mode ';' send ?
 bind /   copy-mode ';' send /
 bind v   copy-mode ';' send v
 bind V   copy-mode ';' send V
 bind C-v copy-mode ';' send C-v
+bind Enter copy-mode ';' send Enter
 bind -T  copy-mode-vi v     send -X begin-selection
 bind -T  copy-mode-vi C-c   send -X clear-selection
-bind -T  copy-mode-vi q     send -X cancel
-bind -T  copy-mode-vi p     send -X cancel          ';' send-prefix
+bind -T  copy-mode-vi Escape send -X cancel
 bind -T  copy-mode-vi Enter send -X clear-selection ';' send -X select-word
 bind -T  copy-mode-vi C-v   send -X rectangle-on    ';' send -X begin-selection
 
@@ -176,7 +175,6 @@ bind p paste-buffer
 # bind o   run "${tmux_tool}/debug-console.bash"
 bind h   list-keys -T prefix ';' list-keys -T copy-mode-vi
 bind ,   new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
-bind ';' new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
 bind C   confirm-before -p "Do you want to clear history? (y/n)" clear-history
 
 ## Plugins
@@ -226,7 +224,7 @@ set -g @fuzzback-fzf-colors   'hl:1:underline,hl+:1:underline'
 set -g @fuzzback-finder-bind  'ctrl-d:half-page-down,ctrl-u:half-page-up,ctrl-s:toggle-sort,ctrl-p:toggle-preview,ctrl-a:first,ctrl-e:last,ctrl-c:cancel,ctrl-t:toggle-track'
 
 set -g @plugin                               'IngoMeyer441/tmux-easy-motion'
-set -g @easy-motion-prefix                   "g"
+set -g @easy-motion-prefix                   "J"
 set -g @easy-motion-target-keys              "fjdkslghrua;eiwoqptyvncm"
 set -g @easy-motion-default-motion           "bd-f"
 set -g @easy-motion-dim-style                "fg=colour242"
