brew: add more comments and disable dependencies check

--- a/homebrew/brew.env
+++ b/homebrew/brew.env
@@ -1,1 +1,14 @@
-HOMEBREW_NO_AUTO_UPDATE=1
+# If set, do not automatically update before running some commands, e.g. brew
+# install, brew upgrade and brew tap. Preferably, run this less often by
+# setting HOMEBREW_AUTO_UPDATE_SECS to a value higher than the default. Note
+# that setting this and e.g. tapping new taps may result in a broken
+# configuration. Please ensure you always run brew update before reporting any
+# issues.
+export HOMEBREW_NO_AUTO_UPDATE=1
+
+# If set, do not check for broken linkage of dependents or outdated dependents
+# after installing, upgrading or reinstalling formulae. This will result in
+# fewer  dependents (and their dependencies) being upgraded or reinstalled but
+# may result in more breakage from running brew install formula or brew upgrade
+# formula.
+export HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1
