--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      SauceCodePro Nerd Font Mono
+font_family      MesloLGMDZ Nerd Font Mono
+# font_family      SauceCodePro Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
