tig: mv tig.run to .local/bin

--- a/tig/Makefile
+++ b/tig/Makefile
@@ -1,13 +1,14 @@
 PKG_NAME=tig
 CONFIG_DIR=${XDG_CONFIG_HOME}/$(PKG_NAME)
+LOCAL_BIN=${HOME}/.local/bin
 
 .ONESHELL:
 config.$(PKG_NAME):
 	$(H)echo "-- $(PKG_NAME): setup config --"
-	$(H)if [[ ! -e ~/bin ]]; then
-		mkdir ~/bin
+	$(H)if [[ ! -e $(LOCAL_BIN) ]]; then
+		mkdir $(LOCAL_BIN)
 	fi
-	$(H)ln -sf $(CONFIG_DIR)/tig.run ~/bin/
+	$(H)ln -sf $(CONFIG_DIR)/tig.run $(LOCAL_BIN)
 
 install.$(PKG_NAME):
 	$(H)echo "-- $(PKG_NAME): install package --"
