tmux: update tmux win operations

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,7 +44,11 @@ setw -g  monitor-bell     on    # monitor bell in the window
 setw -g  visual-bell      on    # show visual alert when task complete
 setw -g  bell-action      other # only other, not current window, triggers bell
 set  -g  renumber-windows on    # renumber window index if any window is closed
-set  -g aggressive-resize on    # determine the size of windows depending on where they are _displayed_, not where they are attached to.
+set  -g  aggressive-resize on   # determine the size of windows depending on where they are _displayed_, not where they are attached to.
+
+# Use repeat-time to simulate vim-like normal mode
+# However, it would only affect '-r' binds usually related to win & pane operations
+set  -g  repeat-time      30000
 
 # Border
 set -g pane-border-status top
@@ -113,7 +117,12 @@ unbind M-3
 unbind M-4
 unbind M-5
 unbind Space
-bind l next-layout
+bind -r l next-layout
+
+# Client:
+unbind &
+unbind d
+bind & detach-client		# Change detach-client 'd' to &
 
 # Session:
 # [x] pop up menu for session operation
@@ -126,29 +135,42 @@ bind s choose-tree -sZ -O name			# improve keybind s
 # [x] show window options
 unbind p
 unbind .
-unbind &
-bind k confirm-before -p "Do you really want to kill this window? (y/n)" kill-window
-bind r move-window -r ';' select-layout -E	# sort the windows
-bind w choose-tree -w -f '#{m:#{session_attached},1}'
+bind c new-window -a -c "#{pane_current_path}"	# enhance keybind c
+bind X confirm-before -p "Do you really want to kill this window? (y/n)" kill-window
+bind -r r move-window -r ';' select-layout -E	# sort the windows
 bind -r a last-window
 bind -r Tab select-window -n
 bind -r BTab select-window -p
-
-bind c new-window -a -c "#{pane_current_path}"	# enhance keybind c
+bind -r 0 select-window -t :=0
+bind -r 1 select-window -t :=1
+bind -r 2 select-window -t :=2
+bind -r 3 select-window -t :=3
+bind -r 4 select-window -t :=4
+bind -r 5 select-window -t :=5
+bind -r 6 select-window -t :=6
+bind -r 7 select-window -t :=7
+bind -r 8 select-window -t :=8
+bind -r 9 select-window -t :=9
+bind w choose-tree -w -f '#{m:#{session_attached},1}'
 
 # Pane:
 # - select-layout -E could only balance the simple layout
 # [x] pop up menu for pane operation
 unbind '"'
 unbind %
-bind | split-window -h -c "#{pane_current_path}" ';' select-layout -E
-bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
+unbind Right
+unbind Left
+unbind Up
+unbind Down
 bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x
+bind -r | split-window -h -c "#{pane_current_path}" ';' select-layout -E
+bind -r - split-window -v -c "#{pane_current_path}" ';' select-layout -E
 bind -r \\ display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d 200   # enhance keybind n
-bind -r Right select-pane -Z -R
-bind -r Left select-pane -Z -L
-bind -r Up select-pane -Z -U
-bind -r Down select-pane -Z -D
+bind -r C-h select-pane -Z -R
+bind -r C-l select-pane -Z -L
+bind -r C-k select-pane -Z -U
+bind -r C-j select-pane -Z -D
+bind -r z resize-pane -Z
 
 # Copy-mode:
 unbind [
@@ -221,9 +243,9 @@ set -g @fuzzback-fzf-colors   'hl:1:underline,hl+:1:underline'
 set -g @fuzzback-finder-bind  'ctrl-d:half-page-down,ctrl-u:half-page-up,ctrl-s:toggle-sort,ctrl-p:toggle-preview,ctrl-a:first,ctrl-e:last,ctrl-c:cancel,ctrl-t:toggle-track'
 
 set -g @plugin                               'IngoMeyer441/tmux-easy-motion'
-set -g @easy-motion-prefix                   "J"
+set -g @easy-motion-prefix                   "f"
 set -g @easy-motion-target-keys              "fjdkslghrua;eiwoqptyvncm"
-set -g @easy-motion-default-motion           "bd-f"
+set -g @easy-motion-default-motion           "bd-f2"
 set -g @easy-motion-dim-style                "fg=colour242"
 set -g @easy-motion-highlight-style          "fg=colour196,bold"
 set -g @easy-motion-highlight-2-first-style  "fg=brightyellow,bold"
