--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,7 +48,7 @@ set  -g  aggressive-resize on   # determine the size of windows depending on whe
 
 # Use repeat-time to simulate vim-like normal mode
 # However, it would only affect '-r' binds usually related to win & pane operations
-set  -g  repeat-time      30000
+set  -g  repeat-time      5000
 
 # Border
 set -g pane-border-status top
@@ -174,6 +174,7 @@ bind -r z resize-pane -Z
 
 # Copy-mode:
 unbind [
+unbind -T copy-mode-vi Space
 bind e   copy-mode
 bind `   send-prefix
 bind ?   copy-mode ';' send ?
@@ -181,7 +182,6 @@ bind /   copy-mode ';' send /
 bind v   copy-mode ';' send v
 bind V   copy-mode ';' send V
 bind C-v copy-mode ';' send C-v
-bind Enter copy-mode ';' send Enter
 bind -T  copy-mode-vi v     send -X begin-selection
 bind -T  copy-mode-vi C-c   send -X clear-selection
 bind -T  copy-mode-vi Escape send -X cancel
