kitty: update kitty.conf

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,7 +25,7 @@ font_family      MesloLGMDZ Nerd Font Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 15.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -1144,7 +1144,7 @@ strip_trailing_spaces always
 #: --login and --interactive to ensure that the shell starts in
 #: interactive mode and reads its startup rc files.
 
-editor /usr/local/bin/vim
+# editor /usr/local/bin/vim
 
 #: The terminal based text editor (such as vim or nano) to use when
 #: editing the kitty config file or similar tasks.
